Added machine sequence and clarity(Armin)

--- a/CritiqueIntroduction.md.tex
+++ b/CritiqueIntroduction.md.tex
@@ -39,17 +39,208 @@ The model should be readable by humans. A model that looks complicated and impre
 \section{Invariants \& Theorems}
 \label{invariantstheorems}
 
+\subsection{group 4}
+\label{group4}
+
+\subsection{group 7}
+\label{group7}
+
+\subsection{group 11}
+\label{group11}
+
+\subsection{group 3}
+\label{group3}
+
 \section{Correctness \& Consistency}
 \label{correctnessconsistency}
+
+\subsection{group 4}
+\label{group4}
+
+\subsection{group 7}
+\label{group7}
+
+\subsection{group 11}
+\label{group11}
+
+\subsection{group 3}
+\label{group3}
 
 \section{Concrete}
 \label{concrete}
 
+\subsection{group 4}
+\label{group4}
+
+\subsection{group 7}
+\label{group7}
+
+\subsection{group 11}
+\label{group11}
+
+\subsection{group 3}
+\label{group3}
+
 \section{Machine Sequence}
 \label{machinesequence}
 
+\subsection{Group 04}
+\label{group04}
+
+\subsubsection{Machine Sequence}
+\label{machinesequence}
+
+\begin{itemize}
+\item StorageArea
+
+\item WarehouseR0
+
+\item WarehouseR1
+
+\item InventoryR3
+
+\item StoreR4
+
+\item StoreR5
+
+\item StoreR6
+
+\item AdministrationR7
+
+\item WarehouseR8
+
+\item StoreR9
+
+\item CustomerR10
+
+\item ExpiryR11
+
+\item ExpiryR12
+
+\item SplittersR13
+
+\item ExpiryR14
+
+\end{itemize}
+
+\subsubsection{Critique}
+\label{critique}
+
+Group 04 has the most number of machines among the 4 groups that we have decided to critique on. Coming in at a total of 15 machines. They started their model well. As the machines have strong relationships\slash linkage between each other as the refinement progresses. But started showing problems in their from AdministrationR7 onwards. Having not planned well before hand, they had to refine AdministrationR7 into WarehouseR8 to add in \emph{event SetThreshold} and \emph{event MoveStock refines AddObject}. They could have easily done that in StoreR6.  \\ \\  Following on, they modelled StoreR9 to be able to choose, purchase, refund and move products. CustomerR10 to model loyalty points and memberships. Next, they followed on by modelling ExpiryR11, ExpiryR12. These refinements could have been incorporated into previous machines and clearly do not have any relations to the previous machine CustomerR10.  \\ \\  They tried to split the stores\slash warehouse into different areas with the next refinement being SplittersR13. And with the new areas, they had to set the expiry to move stock to the new designated areas resulting in the refinement ExpiryR14. Due to lack of foresight and planning, the group did not have a good machine sequence.  \\ \\  Instead of continuing to refine the machines in this way, they could have saved themselves much trouble by actually editing the previous machines to reflect the changes in work flow instead of pressing on.
+
+\subsection{Group 07}
+\label{group07}
+
+\subsubsection{Machine Sequence}
+\label{machinesequence}
+
+\begin{itemize}
+\item POS-Product-R0
+
+\item POS-Stock-R1
+
+\item POS-Location-R2
+
+\item POS-Trolley-R3
+
+\item POS-User-R4
+
+\item POS-Return-R5
+
+\item POS-StorageCapacity-R6
+
+\item POS-UserClasses-R7
+
+\item POS-Days-R8
+
+\item POS-Threshold-R9
+
+\item POS-Registers-R10
+
+\item POS-ProductType-R11
+
+\item POS-Discount-R12
+
+\item POS-PaymentMethods-R13
+
+\end{itemize}
+
+\subsubsection{Critique}
+\label{critique}
+
+Group 07 has quite a number of machines, 14 machines. Although unlike Group 04, overall, they have a better thought out model in terms of machine sequence. Most of the refinements are clearly related with each refinement building on to the previous machine. Improvements could still be made though.  \\ \\  If they had added in the different user capabilities from POS-UserClasses-R7 into POS-User-R4, they could have brought POS-Threshold-R9 and POS-ProductType-R11 up into the earlier refinements after POS-StorageCapacity-R6 and the later refinements would only be dealing with \emph{Registers, Discounts and Payment Methods} which would have a better flow. In this case, even when dealing with a large number of machines, Group 07 has done well in terms of machine sequencing.
+
+\subsection{Group 11}
+\label{group11}
+
+\subsubsection{Machine Sequence}
+\label{machinesequence}
+
+\begin{itemize}
+\item BasicPOS
+
+\item Orders
+
+\item Locations
+
+\item Users
+
+\item Transactions
+
+\item Loyalty Program
+
+\item Price Modification and Refund
+
+\item Schedule
+
+\end{itemize}
+
+\subsubsection{Critique}
+\label{critique}
+
+Group 11 has less machines compared to the previous 2 groups. The flow is similar to group 07, with the basic warehousing system modelled first, followed by ordering of stock from suppliers. And then on to the Locations which should come before Orders, as it makes for a better machine sequence. The next refinement, Users and then to Transactions followed by the Loyalty Program. Price Modification and Refund machine should come before the Loyalty Program as it has more to deal with Transactions. Schedule should come after Orders or Locations as it deals with the scheduling of stock and not refined from Price Modification and Refund
+
+\subsection{Group 03}
+\label{group03}
+
+\subsubsection{Machine Sequence}
+\label{machinesequence}
+
+\begin{itemize}
+\item PoSWare
+
+\item WarehouseR1
+
+\item StoresR2
+
+\item RetailR3
+
+\item MembershipR4
+
+\end{itemize}
+
+\subsubsection{Critique}
+\label{critique}
+
+Our group also has less machines compared to group 04 and group 07. Comparatively, our group has good machine sequencing. With modelling the behaviour of the overall system in PoSWare and refining it into Warehouses and Stores. Following that, it was further refined to Retail to deal with transactions and refunds. And the finally refined into Membership to deal with various membership benefits.
+
 \section{Clarity}
 \label{clarity}
+
+\subsection{Naming the project}
+\label{namingtheproject}
+
+The name of project should clarify breafly at the first look.In SENG projects, It's a good practise to mention the Group number and the module's name which is moduled. None of the group have done it properly, Group 07 chose the name “SENG”, Group 04 chose “PosWare” and Group 11 called it “POS”. None of these gives any information about which group are these which just make it hard for marker to figure group's number by himself. However group 3 just called Group3, which is the best in here but not enough. (no mentioning the mudoles name)
+
+\subsection{Good use of naming varables}
+\label{gooduseofnamingvarables}
+
+Group 4: At early stage of refinement group4 have clear and distinguished names for variables and parameters, but at the end many names are almost repeated for different varable without extra explanation such as : “basket objects” and “basket product”.  \\ \\  Group7: chose resemble naming for their variable but they haven't keep the correct style of naming system, such as instead of “floorShelves” they used “floorshelves” which in a long list will makes hard to distinguished.  \\ \\  Group11: Group , made the same mistake as Group 7. such as “pointsaccumulated” , These mistakes makes it hard to read, which is one of the main purposes of moduling.  \\ \\  Group3 : same mistake but not as much as other groups . As an example “Reorderlevel”  \\ \\  Good naming of refinement and correct positions for refinement, for easy finding.  \\ \\  In General a Week point of Event-B is it will order the machines based on alphabetic order, while it might shows notting and just caused the misunderstand. But having said that it can be handled.So reader can understand which machine is the refinement of which one.  \\ \\  Group 4: Group 4 did a trick by adding R[number] at the end of each machine and context . It number indicate the number of the refinement. However, they haven't done it properly by forgotting to use this system for all machines , such as example “storage area” has no R at the end. Beside the ordering is still confusing . They could use the numbering at the beginning.  \\ \\  Group 7: Group 7 did the same technique but correctly , however they are also having the same ordering issue , including the extra “POS\_” at the beginning which again make it harder to read trough the list. Such as “POS\_Discount\_R12”,”POS\_Days\_R8” and “POS\_Return\_R5”. It's a psychological reason that eye first look at the start of line which here it's just lead to confussion.  \\ \\  Group 11: This group haven't done anything to solve this problem and it will make the reader just to look each machine and flow the path backward to reach the beginning. And again search for the refinement. So imature.  \\ \\  Group 3: This group haven't done anything extra than groups 4 and 7.  \\ \\  Conclusion: In order to make it easier to read the machines in project and find out the refinement of a machine, machines should be called 1.[machine\_name], based on their ordering system, so evenB order it automatically and also the user knows which machine is the next refinement. 
+
+\subsection{Adding new events properly}
+\label{addingneweventsproperly}
+
+In EvenB when new events are added to the refinement they should be added to the top of the list, not at the button. This simple mistake will make the user just scroll down in each refinement to reach the new events.As an example the in group4 for machine ExpiryR12 to reach the new events user needs to pass 14 old events.The only group who did this properly is the group 3.  \\ \\  To sum up, some easy practice which can make the module easier to read have been forgotten by many groups. Such as mentioning the group number and the module name on project name. Clear and distinguished naming for variable events and parameters with using the correct naming style. Ordering the refinement in-order to make it easy to find the next refinement. And the last adding new events to the top of old event in order to prevent scrolling all the way down.
 
 \chapter{``New'' Specification Summary}
 \label{newspecificationsummary}
