--- a/CritiqueIntroduction.md.tex
+++ b/CritiqueIntroduction.md.tex
@@ -22,11 +22,6 @@
 
 Invariants should express all constraints on the machine that are important to the integrity of the system. They are not merely used as a method to declare variable types. The invariants should be used to specify the semantic relationships between variables. It is also said that invariants should be as strong as necessary but no stronger. Theorems provide a way for checks to confirm those properties that are \emph{``obviously''} true. 
 
-\subsection{Correctness \& Consistency}
-\label{correctnessconsistency}
-
-Correctness \& consistency is one of the important aspects in a model. Not only the model has to be correctly modelled, i.e. all proof obligations discharged, it has to be consistent with the requirements. The model also has to be complete, fulfilling all the requirements.
-
 \subsection{Concrete}
 \label{concrete}
 
@@ -89,47 +84,30 @@ Despite having no integrity based constraints, some of our guards were sufficien
 
 In all four groups, no theorems were included, and will be disregarded for this basis of this critique.
 
-\section{Correctness \& Consistency}
-\label{correctnessconsistency}
-
-\subsection{Group 04}
-\label{group04}
-
-Gruop 04 was able to model most of their requirements. There 
-
-\subsection{Group 07}
-\label{group07}
-
-\subsection{Group 11}
-\label{group11}
-
-\subsection{Group 03}
-\label{group03}
-
 \section{Concrete}
 \label{concrete}
 
-\subsection{Group 04}
-\label{group04}
+\subsection{Group 4}
+\label{group4}
 
-This group demonstrated good abstract design for their requirements. As we can see, the product requirements only describe the behaviour of the system instead of depicting specific stuff on how the requirement will be accomplish. However in event-B, their way of constructing the user access is too concrete because they have to specify which user it is in each function. Looking at figure 1 (appendix A), they just model the behaviour of what the system is going to do without any specific information that suggest how the system would meet the goal. For example in appendix B.1, the function Set Threshold contains the guard specify the user have to be a manager in order to use this function. 
+This group demonstrated good abstract design for most of their requirements. As we can see, the product requirements only describe the behaviour of the system instead of depicting specific stuff on how the requirement will be accomplish. Looking at PD--2.2.1 and PD--2.2.2 (appendix A, figure 1), the two product requirements have goo abstract design because they just model the behaviour of the system without providing any specific ways or information that suggests how the system would meet the goal. However in event-B, their way of constructing the user access is too concrete because they have to specify which user was granted the access in each function. Also some of the events contain too many details. For example in the MoveStock event (appendix A,figure2), this event contains too many guards that would make this event too specific. The group should distribute the guards out of the machine would be more abstract. 
 
-\subsection{Group 07}
-\label{group07}
+\subsection{Group 7}
+\label{group7}
 
-In appendix C, the product requirements are too specific. They should move those requirements down or make them more abstract. For example, PD--2.5.3 states that items are placed under the same classification so this will tell where this item should be placed. This requirement should be replaced as the system can handle item storage. As for the Event-B, they have too many guards in each function that would make their model too specific. For instance in appendix D.1, the function Add Product to Warehouse has a lot of guards while there are only two actions. They should delegate the invariants at each machine instead of within each function. Then in appendix D.2, the function contains too many details which would make the model too concrete. The guard that restricts the staff from making the transaction because the registrar doesn’t have enough money to give the changes is a huge problem for the staff. The staff would have to go get the changes from somewhere else then come back to notify the system that the registrar got more money then it could process the transaction.
+Overall, this group have most of the requirements well model, but a few requirements are too specific and can be broken down further. For instances, PD--2.5.5 (appendix B,figure1) is too specific because I know how the goal would be accomplish. They should move those requirements down or make them more abstract. For example, PD--2.5.3(appendix B,figure1) should be replaced as the system can handle item storage so then in the design level can then state that the same items would be place at the same location. As for the Event-B, they have too many guards in each function that would make their model too specific. For instance in the event AddStockToWarehouse (appendix B,figure2), the function has a lot of guards while there are only two actions. Some of those guards can actually be moved to the invariants at each machine instead of within each function. Then in the BuyTrolly event (appendix B,figure3), the function contains too many details which would make the model too concrete. Like in a scenario when the registrar ran out of money, the guard would actually restrict the staff from making the transaction because the guard states it so therefore the event can not be fired. Maybe the cashier would actually want to settle the transaction first then proceed to get the changes for the customer. An abstract event would need to be as general as possible to compute with as many situations as possible. 
 
 \subsection{Group 11}
 \label{group11}
 
-Referring to appendix E, the requirement describes how it would achieve the goal making it too specific for a product requirement. The requirement should be more abstract like the system can handle replacement orders or else you can’t extend that product requirement further down to design level. Looking at this simple function Give Change in appendix F, the function has too many guards for only one operation. More guards should be delegated at the top of the machine and the invariants could be more general to make the model more abstract.
+This group has the most concrete requirements among the four groups. Referring to PD--1.2.6 (appendix C,figure1), the requirement is too concrete because I can figure out how the goods will be dealt with when it is in a replacement order. The requirement should be more abstract like the system can handle replacement orders or else you can’t extend that product requirement further down to design level. Then the event-B for this group has a lot of specific events that probably would only suit for some limited situation. By taking a look at this simple event Give Change (appendix C,figure2), this event has too many guards for only one operation. More guards should be delegated at the top of the machine and the invariants could be more general to make the model more abstract. 
 
-\subsection{Group 03}
-\label{group03}
+\subsection{Group 3}
+\label{group3}
 
-In appendix G, the requirement is specific to list out the attribute that the system would store. It can just be the system can record product details and then extends that requirement down to design level where you can then state that it can store these types of attributes. Referencing to appendix H, the function contains too many guards that would make the function too specific. The function could be better to rearrange the guards out of the functions. 
+This group has most of the requirements model fairly abstract with a few requirements that could be better. For example PL--2.4.3 (appendix D,figure1) contains specific information that list out the attribute that the system would store. The requirement can be replace as the system can record product details and then extends that requirement down to design level where it can then state the previous attributes that were mentioned. Most of the events in Event-B were modelled well except for some events like AddProductStore (appendix D,figure2), the event contains too many guards that would make the function too specific. The function could be better to rearrange the guards out of the functions and also reduce the amount of information in the event. 
 
-Overall, all the groups have some parts that are well model and some parts are too specific. Out of all the groups, group 4 have the most abstract model. Our group (group 3) is place in the middle of the bunch. Group 11 have too many details in some of the functions making it to cause too many errors in the model. 
+Overall, most of the groups have their requirements well modelled, but the Event-B was too specific in general. Out of all the groups, group 4 have the most abstract model for both the requirement and Event-B. Our group (group 3) is place in the middle because most of our requirements are well modelled. Group 11 have most concrete model and contains too many details in some of the functions making it cause too many errors in the model.
 
 \section{Machine Sequence}
 \label{machinesequence}
@@ -140,38 +118,7 @@ Overall, all the groups have some parts that are well model and some parts are t
 \subsubsection{Machine Sequence}
 \label{machinesequence}
 
-\begin{itemize}
-\item StorageArea
-
-\item WarehouseR0
-
-\item WarehouseR1
-
-\item InventoryR3
-
-\item StoreR4
-
-\item StoreR5
-
-\item StoreR6
-
-\item AdministrationR7
-
-\item WarehouseR8
-
-\item StoreR9
-
-\item CustomerR10
-
-\item ExpiryR11
-
-\item ExpiryR12
-
-\item SplittersR13
-
-\item ExpiryR14
-
-\end{itemize}
+StorageArea --$>$ WarehouseR0 --$>$ WarehouseR1 --$>$ InventoryR3 --$>$ StoreR4 --$>$ StoreR5 --$>$ StoreR6 --$>$ AdministrationR7--$>$ WarehouseR8 --$>$ StoreR9 --$>$ CustomerR10 --$>$ ExpiryR11 --$>$ ExpiryR12 --$>$ SplittersR13 --$>$ ExpiryR14
 
 \subsubsection{Critique}
 \label{critique}
@@ -184,36 +131,7 @@ Group 04 has the most number of machines among the 4 groups that we have decided
 \subsubsection{Machine Sequence}
 \label{machinesequence}
 
-\begin{itemize}
-\item POS-Product-R0
-
-\item POS-Stock-R1
-
-\item POS-Location-R2
-
-\item POS-Trolley-R3
-
-\item POS-User-R4
-
-\item POS-Return-R5
-
-\item POS-StorageCapacity-R6
-
-\item POS-UserClasses-R7
-
-\item POS-Days-R8
-
-\item POS-Threshold-R9
-
-\item POS-Registers-R10
-
-\item POS-ProductType-R11
-
-\item POS-Discount-R12
-
-\item POS-PaymentMethods-R13
-
-\end{itemize}
+POS-Product-R0 --$>$ POS-Stock-R1 --$>$ POS-Location-R2 --$>$ POS-Trolley-R3 --$>$ POS-User-R4 --$>$ POS-Return-R5 --$>$ POS-StorageCapacity-R6 --$>$ POS-UserClasses-R7 --$>$ POS-Days-R8 --$>$ POS-Threshold-R9 --$>$ POS-Registers-R10 --$>$ POS-ProductType-R11 --$>$ POS-Discount-R12 --$>$ POS-PaymentMethods-R13
 
 \subsubsection{Critique}
 \label{critique}
@@ -226,24 +144,7 @@ Group 07 has quite a number of machines, 14 machines. Although unlike Group 04, 
 \subsubsection{Machine Sequence}
 \label{machinesequence}
 
-\begin{itemize}
-\item BasicPOS
-
-\item Orders
-
-\item Locations
-
-\item Users
-
-\item Transactions
-
-\item Loyalty Program
-
-\item Price Modification and Refund
-
-\item Schedule
-
-\end{itemize}
+BasicPOS --$>$ Orders --$>$ Locations --$>$ Users --$>$ Transactions --$>$ Loyalty Program --$>$ Price Modification and Refund --$>$ Schedule
 
 \subsubsection{Critique}
 \label{critique}
@@ -256,18 +157,7 @@ Group 11 has less machines compared to the previous 2 groups. The flow is simila
 \subsubsection{Machine Sequence}
 \label{machinesequence}
 
-\begin{itemize}
-\item PoSWare
-
-\item WarehouseR1
-
-\item StoresR2
-
-\item RetailR3
-
-\item MembershipR4
-
-\end{itemize}
+PoSWare --$>$ WarehouseR1 --$>$ StoresR2 --$>$ RetailR3 --$>$ MembershipR4
 
 \subsubsection{Critique}
 \label{critique}
@@ -300,6 +190,243 @@ In EvenB when new events are added to the refinement they should be added to the
 
 \chapter{Appendix}
 \label{appendix}
+
+\section{A}
+\label{a}
+
+\subsection{Figure1}
+\label{figure1}
+
+PD--2.2.1 (!M) System will Keep Track of all Transactions.
+All transactions made by the system will be stored in the system.
+PD--2.2.2 (!M) System will Keep Track of Related Transactions.
+Any related transactions are flagged in the system.
+
+\subsection{Figure2}
+\label{figure2}
+
+\textbackslash{}EVT \{MoveStock\}\textbackslash{}cmt\{ \textbackslash{}\textbackslash{}hspace\emph{\{2.4 cm\} [PD--3.2.2 System will Automatically Order Stock from Back Store Room to Replenish Store Shelves]
+\textbackslash{}\textbackslash{}hspace}\{2.2 cm\} [PD--3.2.3 System will Automatically Order Stock from Warehouse to Replenish Back Store Room]
+\textbackslash{}\textbackslash{}hspace\emph{\{2.2 cm\} [PD--3.2.4 System will Automatically Order Stock from Suppliers to Replenish Warehouse] \}
+\textbackslash{}EXTD \{MoveStock\}
+\textbackslash{}begin\{description\}
+\textbackslash{}AnyPrm
+\textbackslash{}begin\{description\}
+\textbackslash{}ItemX\{user \}
+\textbackslash{}ItemX\{toLocation \}
+\textbackslash{}ItemX\{fromLocation \}
+\textbackslash{}ItemX\{amount \}
+\textbackslash{}ItemX\{product \}
+\textbackslash{}ItemX\{objectSet \}
+\textbackslash{}Item\{store \}
+\textbackslash{}end\{description\}
+\textbackslash{}WhereGrd
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemX\{ grd5 \}\{ amount = 1 \}
+\textbackslash{}nItemX\{ grd1 \}\{ user \textbackslash{}in managers \}
+\textbackslash{}nItemX\{ grd2 \}\{ toLocation \textbackslash{}in storages \}
+\textbackslash{}nItemX\{ grd3 \}\{ fromLocation \textbackslash{}in storages \}
+\textbackslash{}nItemX\{ grd6 \}\{ product \textbackslash{}in productLines \}
+\textbackslash{}nItemX\{ grd7 \}\{ storageProducts(fromLocation)(product) \textbackslash{}geq amount \}
+\textbackslash{}nItemX\{ grd8 \}\{ product \textbackslash{}in dom(storageProducts(toLocation)) \}
+\textbackslash{}nItemX\{ grd9 \}\{ product \textbackslash{}in dom(storageProducts(fromLocation)) \}
+\textbackslash{}nItemX\{ grd10 \}\{ fromLocation \textbackslash{}neq toLocation \}
+\textbackslash{}nItemX\{ grd11 \}\{ maxSize(toLocation) \textbackslash{}geq usedSize(toLocation) + (amount * size(product)) \}
+\textbackslash{}nItemX\{ grd12 \}\{ warehouseThreshold(toLocation)(product) \textbackslash{}geq storageProducts(toLocation)(product) \}
+\textbackslash{}nItemX\{ grd13 \}\{ objectSet \textbackslash{}subseteq objects \}
+\textbackslash{}nItemX\{ grd14 \}\{ objectSet \textbackslash{}subseteq productObjects(product) \}
+\textbackslash{}nItemX\{ grd16 \}\{ objectSet \textbackslash{}subseteq storageObjects(fromLocation) \}
+\textbackslash{}nItemX\{ grd15 \}\{ card(objectSet) = amount \}
+\textbackslash{}nItemXY\{ grd17 \}\{ objectSet \textbackslash{}nsubseteq storageObjects(toLocation) \}\{ \textbackslash{}\textbackslash{}hspace}\{1.6 cm\} shouldn't be a problem \}
+\textbackslash{}nItemY\{ grd18 \}\{ (fromLocation \textbackslash{}in warehouseAreas \textbackslash{}land toLocation \textbackslash{}in backRoomAreas
+\textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} \textbackslash{}land toLocation \textbackslash{}in storeBackRooms(store)) \textbackslash{}lor
+\textbackslash{}\textbackslash{}hspace}\{1.4 cm\} (fromLocation \textbackslash{}in backRoomAreas \textbackslash{}land fromLocation \textbackslash{}in storeBackRooms(store)
+\textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} \textbackslash{}land toLocation \textbackslash{}in shelfAreas \textbackslash{}land toLocation \textbackslash{}in storeShelves(store)) \}\{ \textbackslash{}\textbackslash{}hspace}\{1.6 cm\} either moving from a warehouse to a store
+\textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} or from store backroom to it's shelf \}
+\textbackslash{}end\{description\}
+\textbackslash{}ThenAct
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemX\{ act1 \}\{ storageProducts := storageProducts \textbackslash{}ovl
+\textbackslash{}\textbackslash{}hspace}\{1.2 cm\} \{ fromLocation \textbackslash{}mapsto \{ product \textbackslash{}mapsto (storageProducts(fromLocation)(product)- amount)\} ,
+\textbackslash{}\textbackslash{}hspace\emph{\{1.2 cm\} toLocation \textbackslash{}mapsto \{ product \textbackslash{}mapsto (storageProducts(toLocation)(product)+amount)\} \} \}
+\textbackslash{}nItemX\{ act2 \}\{ usedSize := usedSize \textbackslash{}ovl
+\textbackslash{}\textbackslash{}hspace}\{1.2 cm\} \{ fromLocation \textbackslash{}mapsto (usedSize(fromLocation) - (amount * size(product))),
+\textbackslash{}\textbackslash{}hspace\emph{\{1.2 cm\} toLocation \textbackslash{}mapsto (usedSize(toLocation) + (amount * size(product)))\} \}
+\textbackslash{}nItemX\{ act3 \}\{ storageObjects := storageObjects \textbackslash{}ovl
+\textbackslash{}\textbackslash{}hspace}\{1.2 cm\} \{ fromLocation \textbackslash{}mapsto (storageObjects(fromLocation) \textbackslash{}setminus objectSet),
+\textbackslash{}\textbackslash{}hspace*\{1.2 cm\} toLocation \textbackslash{}mapsto (storageObjects(toLocation) \textbackslash{}bunion objectSet)\} \}
+\textbackslash{}end\{description\}
+\textbackslash{}EndAct
+\textbackslash{}end\{description\}
+
+\section{B}
+\label{b}
+
+\subsection{Figure1}
+\label{figure1}
+
+PD--2.5.3 Items are placed under the same classification and this will define which shelf it is
+placed on
+PD--2.5.5 The placement of a product on a specific shelf is defined by the size of the store,
+it’s location and season
+
+\subsection{Figure2}
+\label{figure2}
+
+\textbackslash{}EVT \{AddStockToWarehouse\}
+\textbackslash{}EXTD \{AddStockToWarehouse\}
+\textbackslash{}begin\{description\}
+\textbackslash{}AnyPrm
+\textbackslash{}begin\{description\}
+\textbackslash{}ItemX\{product \}
+\textbackslash{}ItemX\{amount \}
+\textbackslash{}ItemX\{manager \}
+\textbackslash{}ItemX\{expiryDay \}
+\textbackslash{}end\{description\}
+\textbackslash{}WhereGrd
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemX\{ grd1 \}\{ product \textbackslash{}in products \}
+\textbackslash{}nItemX\{ grd3 \}\{ product \textbackslash{}in dom(warehouse) \}
+\textbackslash{}nItemX\{ grd2 \}\{ amount \textbackslash{}in 0\textbackslash{}upto warehouseLimit \}
+\textbackslash{}nItemX\{ grd4 \}\{ disabled(product) = FALSE \}
+\textbackslash{}nItemX\{ grd50 \}\{ warehouse(product) + amount \textbackslash{}leq warehouseLimit \}
+\textbackslash{}nItemX\{ grd5 \}\{ currentWarehouseCapacity + amount \textbackslash{}leq maxWarehouse \}
+\textbackslash{}nItemX\{ grd7 \}\{ manager \textbackslash{}in employees \}
+\textbackslash{}nItemX\{ grd6 \}\{ employeeGreaterThanOrEqualTo(employeeClasses(manager) \textbackslash{}mapsto MANAGER) = TRUE \}
+\textbackslash{}nItemX\{ grd8 \}\{ activeEmployees(manager) = TRUE \}
+\textbackslash{}nItemX\{ grd9 \}\{ expiryDay \textbackslash{}in 0\textbackslash{}upto maxDays \}
+\textbackslash{}nItemX\{ grd10 \}\{ expiryDay \textbackslash{}geq day \}
+\textbackslash{}nItemX\{ grd11 \}\{ dayStarted = TRUE \}
+\textbackslash{}end\{description\}
+\textbackslash{}ThenAct
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemX\{ act1 \}\{ warehouse(product) := warehouse(product) + amount \}
+\textbackslash{}nItemX\{ act2 \}\{ currentWarehouseCapacity := currentWarehouseCapacity + amount \}
+\textbackslash{}nItemX\{ act3 \}\{ productExpiry(product) := expiryDay \}
+\textbackslash{}end\{description\}
+\textbackslash{}EndAct
+\textbackslash{}end\{description\} 
+
+\subsection{Figure3}
+\label{figure3}
+
+\textbackslash{}EVT \{BuyTrolley\}
+\textbackslash{}REF \{BuyTrolley\}
+\textbackslash{}begin\{description\}
+\textbackslash{}AnyPrm
+\textbackslash{}begin\{description\}
+\textbackslash{}Item\{payment \}
+\textbackslash{}Item\{user \}
+\textbackslash{}Item\{staff \}
+\textbackslash{}Item\{register \}
+\textbackslash{}end\{description\}
+\textbackslash{}WhereGrd
+\textbackslash{}begin\{description\}
+\textbackslash{}nItem\{ grd3 \}\{ payment \textbackslash{}in 0\textbackslash{}upto maxPrice * maxAmountToBuy \}
+\textbackslash{}nItem\{ grd2 \}\{ user \textbackslash{}in users \}
+\textbackslash{}nItem\{ grd6 \}\{ activeUsers(user) = TRUE \}
+\textbackslash{}nItem\{ grd1 \}\{ payment \textbackslash{}geq costOfTrolleys(user) \}
+\textbackslash{}nItem\{ grd4 \}\{ \textbackslash{}forall p \textbackslash{}qdot p \textbackslash{}in products
+\textbackslash{}\textbackslash{}hspace\emph{\{1.2 cm\} \textbackslash{}limp productsInTrolleys(p) \textbackslash{}geq trolleys(user)(p) \}
+\textbackslash{}nItem\{ grd5 \}\{ \textbackslash{}forall p \textbackslash{}qdot p \textbackslash{}in products
+\textbackslash{}\textbackslash{}hspace}\{1.2 cm\} \textbackslash{}limp p \textbackslash{}in dom(productsInTrolleys) \}
+\textbackslash{}nItem\{ grd10 \}\{ userGreaterThanOrEqualTo(userClasses(user) \textbackslash{}mapsto CUSTOMER) = TRUE \}
+\textbackslash{}nItem\{ grd7 \}\{ staff \textbackslash{}in employees \}
+\textbackslash{}nItem\{ grd8 \}\{ employeeGreaterThanOrEqualTo(employeeClasses(staff) \textbackslash{}mapsto STAFF) = TRUE \}
+\textbackslash{}nItem\{ grd9 \}\{ activeEmployees(staff) = TRUE \}
+\textbackslash{}nItem\{ grd11 \}\{ user \textbackslash{}neq staff \}
+\textbackslash{}nItem\{ grd12 \}\{ dayStarted = TRUE \}
+\textbackslash{}nItem\{ grd13 \}\{ register \textbackslash{}in registers \}
+\textbackslash{}nItem\{ grd14 \}\{ registerMoney(register) + costOfTrolleys(user) \textbackslash{}leq maxRegister \}
+\textbackslash{}end\{description\}
+\textbackslash{}ThenAct
+\textbackslash{}begin\{description\}
+\textbackslash{}nItem\{ act1 \}\{ registerMoney(register) := registerMoney(register) + costOfTrolleys(user) \}
+\textbackslash{}nItem\{ act3 \}\{ trolleys(user) := emptyTrolley \}
+\textbackslash{}nItem\{ act2 \}\{ costOfTrolleys(user) := 0 \}
+\textbackslash{}nItem\{ act4 \}\{ totalCostOfTrolleys := totalCostOfTrolleys - costOfTrolleys(user) \}
+\textbackslash{}nItem\{ act5 \}\{ productsInTrolleys :\textbar{} \textbackslash{}forall p \textbackslash{}qdot p \textbackslash{}in products \textbackslash{}land productsInTrolleys \textbackslash{}in products \textbackslash{}tfun \textbackslash{}nat
+\textbackslash{}\textbackslash{}hspace*\{1.2 cm\} \textbackslash{}limp productsInTrolleys'(p) = productsInTrolleys(p) - trolleys(user)(p) \}
+\textbackslash{}nItem\{ act6 \}\{ pastPurchases(user) := userCurrentPurchases(user) \}
+\textbackslash{}nItem\{ act7 \}\{ currentFloorCapacity := currentFloorCapacity - numProductsInTrolley(user) \}
+\textbackslash{}nItem\{ act8 \}\{ numProductsInTrolley(user) := 0 \}
+\textbackslash{}nItem\{ act9 \}\{ sumOfRegisters := sumOfRegisters + costOfTrolleys(user) \}
+\textbackslash{}end\{description\}
+\textbackslash{}EndAct
+\textbackslash{}end\{description\}
+
+\section{C}
+\label{c}
+
+\subsection{Figure1}
+\label{figure1}
+
+PD--1.2.6 Goods that have been replaced by a replacement order are automatically placed into a special\slash spot sale specification.
+Replaced goods that are approaching use-by date will be placed into a discount class for spot sales and specials.
+
+\section{Figure2}
+\label{figure2}
+
+\textbackslash{}EVT \{Give\ensuremath{\sim}Change\}
+\textbackslash{}begin\{description\}
+\textbackslash{}AnyPrm
+\textbackslash{}begin\{description\}
+\textbackslash{}Item\{transaction \}
+\textbackslash{}Item\{user \}
+\textbackslash{}end\{description\}
+\textbackslash{}WhereGrd
+\textbackslash{}begin\{description\}
+\textbackslash{}nItem\{ grd1 \}\{ transaction \textbackslash{}in transactions \}
+\textbackslash{}nItem\{ grd2 \}\{ transaction \textbackslash{}notin transactionInProgress \}
+\textbackslash{}nItem\{ grd3 \}\{ user \textbackslash{}in users \}
+\textbackslash{}nItem\{ grd4 \}\{ usergroups(user) \textbackslash{}in \{ CLERK, MANAGER\} \}
+\textbackslash{}nItem\{ grd5 \}\{ change(transaction) $>$ 0 \}
+\textbackslash{}end\{description\}
+\textbackslash{}ThenAct
+\textbackslash{}begin\{description\}
+\textbackslash{}nItem\{ act1 \}\{ change(transaction) := 0 \}
+\textbackslash{}end\{description\}
+\textbackslash{}EndAct
+\textbackslash{}end\{description\}
+
+\section{D}
+\label{d}
+
+\subsection{Figure1}
+\label{figure1}
+
+PL--2.4.3 The system will record details about specific items (price, desc, weight, size, barcode)
+
+\subsection{Figure2}
+\label{figure2}
+
+\textbackslash{}EVT \{AddProductStore\}\textbackslash{}cmt\{ \textbackslash{}\textbackslash{}hspace\emph{\{3.6 cm\} Adds a product to a store catalouge (sets quantity to 0) \textbackslash{}\textbackslash{}hspace}\{4.4 cm\} Note it only sets the stock for the back of the store. \textbackslash{}\textbackslash{}hspace\emph{\{4.4 cm\} The reason is because a store may accepct refunds for an item that is not sold there \}
+\textbackslash{}EXTD \{AddProductStore\}
+\textbackslash{}begin\{description\}
+\textbackslash{}AnyPrm
+\textbackslash{}begin\{description\}
+\textbackslash{}ItemXY\{item \}\{Any item \}
+\textbackslash{}ItemXY\{store \}\{Any store \}
+\textbackslash{}ItemXY\{stock \}\{Any stock \}
+\textbackslash{}end\{description\}
+\textbackslash{}WhereGrd
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemXY\{ grd1 \}\{ item \textbackslash{}in Product \}\{ \textbackslash{}\textbackslash{}hspace}\{1.4 cm\} The item is in the networked registery of Products \}
+\textbackslash{}nItemXY\{ grd2 \}\{ store \textbackslash{}in Store \}\{ \textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} The store is in the network of stores \}
+\textbackslash{}nItemXY\{ grd3 \}\{ store \textbackslash{}notin Warehouse \}\{ \textbackslash{}\textbackslash{}hspace}\{1.4 cm\} The store isn't a Warehouse (this is only for adding an item to a store) \}
+\textbackslash{}nItemXY\{ grd5 \}\{ ActiveProd \textbackslash{}bunion \{ store \textbackslash{}mapsto item\} \textbackslash{}in Location \textbackslash{}rel Product \}\{ \textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} The store mapped to an item is a possibility (PO) \}
+\textbackslash{}nItemX\{ grd8 \}\{ StoreArea(store) = Backstore \}
+\textbackslash{}nItemXY\{ grd6 \}\{ \{ store \textbackslash{}mapsto item\} \textbackslash{}nsubset ActiveProd \}\{ \textbackslash{}\textbackslash{}hspace}\{1.4 cm\} The item is not currently being sold at the store \}
+\textbackslash{}nItemXY\{ grd7 \}\{ stock = 0 \}\{ \textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} We are setting the initial quantity to 0 - incase we just want to add it to the store catalouge \}
+\textbackslash{}end\{description\}
+\textbackslash{}ThenAct
+\textbackslash{}begin\{description\}
+\textbackslash{}nItemXY\{ act1 \}\{ ActiveProd := ActiveProd \textbackslash{}bunion \{ store \textbackslash{}mapsto item\} \}\{ \textbackslash{}\textbackslash{}hspace}\{1.4 cm\} The item is now in the catalouge of the store \}
+\textbackslash{}nItemXY\{ act2 \}\{ StoreAreaItemQuantity(store \textbackslash{}mapsto Backstore \textbackslash{}mapsto item) := stock \}\{ \textbackslash{}\textbackslash{}hspace\emph{\{1.4 cm\} We are setting the initial quantity to 0 - incase we just want to add it to the store catalouge \}
+\textbackslash{}nItemXY\{ act3 \}\{ Stock(store \textbackslash{}mapsto item) := stock \}\{ \textbackslash{}\textbackslash{}hspace}\{1.4 cm\} The total stock in the store (set equal to 0) \}
+\textbackslash{}end\{description\}
+\textbackslash{}EndAct
+\textbackslash{}end\{description\}
 
 \input{mmd-memoir-footer}
 
