--- a/CritiqueIntroduction.md.tex
+++ b/CritiqueIntroduction.md.tex
@@ -471,7 +471,7 @@ it’s location and season
 PD--1.2.6 Goods that have been replaced by a replacement order are automatically placed into a special\slash spot sale specification.
 Replaced goods that are approaching use-by date will be placed into a discount class for spot sales and specials.
 
-\section{Figure2}
+\subsection{Figure2}
 \label{figure2}
 
 \begin{figure}[htbp]
